OSDA-394-395-396: used approvedRequstConfirmation and deniedRequestConfirmation